<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/welcome_yellow">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_htwo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/login"
        android:textColor="@color/trade_blue"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rdh_semi_bold"
            android:text="@string/dont_have_account"
            android:textColor="@color/trade_blue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/rdh_semi_bold"
            android:text="@string/register"
            android:textColor="@color/trade_blue"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/email"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="14dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/inner_shadow"
        android:inputType="textEmailAddress"
        android:labelFor="@id/edittext_email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/password"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="14dp"
        android:autofillHints="password"
        android:background="@drawable/inner_shadow"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/color_gradient_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/call_to_action"
        android:textAllCaps="false"
        android:textColor="@color/trade_blue"
        android:textSize="20sp" />
</LinearLayout>