<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/welcome_yellow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="40dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/signup"
        android:textColor="@color/trade_blue"
        android:textSize="22sp" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rdh_semi_bold"
            android:text="@string/already_have_account"
            android:textColor="@color/trade_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:fontFamily="@font/rdh_semi_bold"
            android:text="@string/login"
            android:textColor="@color/trade_blue"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/firstname"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp"
        android:layout_marginHorizontal="40dp"/>
    <EditText
        android:id="@+id/edittext_firstname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="14dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/inner_shadow"
        android:inputType="textEmailAddress"
        android:labelFor="@id/edittext_email"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="12sp"
        android:paddingHorizontal="2sp"
        android:textColor="@color/trade_blue"
        android:hint="@string/space"
        android:layout_marginHorizontal="40dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/lastname"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp"
        android:layout_marginHorizontal="40dp"/>

    <EditText
        android:id="@+id/edittext_lastname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="14dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/inner_shadow"
        android:inputType="textEmailAddress"
        android:labelFor="@id/edittext_email"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="12sp"
        android:paddingHorizontal="2sp"
        android:textColor="@color/trade_blue"
        android:hint="@string/space"
        android:layout_marginHorizontal="40dp"/>

    <TextView
        android:id="@+id/textview_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/email"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="14dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/inner_shadow"
        android:inputType="textEmailAddress"
        android:labelFor="@id/edittext_email"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="12sp"
        android:paddingHorizontal="2sp"
        android:textColor="@color/trade_blue"
        android:hint="@string/space"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/password"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="14dp"
        android:autofillHints="password"
        android:background="@drawable/inner_shadow"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="12sp"
        android:paddingHorizontal="2sp"
        android:textColor="@color/trade_blue"
        android:hint="@string/space"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rdh_semi_bold"
        android:text="@string/confirm_password"
        android:textColor="@color/trade_blue_50percent"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/edittext_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp"
        android:padding="14dp"
        android:autofillHints="password"
        android:background="@drawable/inner_shadow"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat_semi_bold"
        android:textSize="12sp"
        android:paddingHorizontal="2sp"
        android:textColor="@color/trade_blue"
        android:hint="@string/space"/>

    <Button
        android:id="@+id/button_to_login"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/color_gradient_button"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="@color/trade_blue"
        android:textSize="20sp" />

</LinearLayout>