<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/welcome_yellow">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/huckster_logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="end"
            android:src="@drawable/huckster" />

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/trade_blue"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/inventoryValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Total Inventory Value: $0.00"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textColor="@color/trade_blue"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/add"
                android:textSize="13sp"
                android:paddingHorizontal="28dp"
                android:paddingVertical="16dp" />

            <Space
                android:layout_width="5dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg2"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/remove"
                android:textSize="13sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/topSellingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Top-Selling Products"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/trade_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topSellingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/restockingTrendsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Restocking Trends"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/trade_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/restockingTrendsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingBottom="36dp"/>
    </LinearLayout>
</ScrollView>